fixed alignment, hyperlinks

--- a/css/404.css
+++ b/css/404.css
@@ -1,25 +1,10 @@
-body {
-    background-color: rgb(162, 194, 221);
-    font-family: Didot, Palatino, serif;
-}
-
-.right {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding-right: 1em;
-    padding-top: 1.5em;
-}
-
-.links {
-    font-size: 0.8rem;
-}
-
-.errorLogo {
+.error-logo {
     border-radius: 50%;
-    width: 10%;
+    border: thick solid purple;
+    width: 10rem;
 }
-.picPara {
+
+.pic-parameters {
     text-align: center;
 }
 
@@ -27,23 +12,10 @@ body {
     text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
-    color: maroon;
 }
-
-/* pushing links to bottom of page */
-.page-container {
-    position: relative;
-    min-height: 100vh;
-}
-
-.content-wrap {
-    padding-bottom: 2.5rem; /* Footer height */
-}
-
-.footer {
+.error-page__main {
     position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;     /* Footer height */
-    text-align: center;
+    top: 0; bottom: 0; left: 0; right: 0;
+    margin: auto;
+    height: 25rem;
 }
